manifests/homarr/homarr-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: homarr-svc
spec:
  # type: ClusterIP
  selector:
    app: homarr-pod
  ports:
    - name: http-homarr-out
      protocol: TCP
      port: 80
      targetPort: http-homarr
